# Gomguk-FE

./: .gitignore  MIGRATION_PLAN.md  MOBILE_MIGRATION_SUMMARY.md  README.md  eslint.config.js  exit  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: arxiv-pipeline.yml
backend/: .black  .gitignore  API_GUIDE.md  API_사용가이드.md  README.md  README_REFACTORING.md  README_STRUCTURE.md  SETUP_GUIDE.md  crawler.py  database.py  env.example  init_demo_data.py  main.py  pipeline.py  pyproject.toml  quick_start.sh  requirements.txt  run.sh  selector.py  summarizer.py  test_api.py  test_import.py  실행가이드.md
backend/api/: __init__.py  papers.py  recommendation.py  summaries.py  user_preferences.py
backend/core/: __init__.py  database.py
backend/crud/: __init__.py  paper.py  summary.py  user_action.py  user_preference.py
backend/models/: __init__.py  database.py  paper.py  summary.py  user_action.py  user_preference.py
backend/routers/: papers.py  recommendation.py  summaries.py  user_preferences.py
backend/schemas/: __init__.py  recommendation.py  user.py
backend/services/: __init__.py  recommendation_service.py
md/: 요약보기-버튼-동작-과정.md
src/: App.tsx  index.css  main.tsx
src/api/: authors.ts  index.ts  papers.ts  reports.ts  summaries.ts  tags.ts
src/components/: BottomNav.tsx  DesktopSidebar.tsx  ErrorBoundary.tsx  LoginForm.tsx  LoginModal.tsx  NotificationList.tsx  PaperCard.tsx  PaperCardSkeleton.tsx  ReportCard.tsx  RightSidebar.tsx  SummaryCarousel.tsx  TagChip.tsx  ThemeToggle.tsx  WhyThisModal.tsx
src/data/: authors.ts  (+2 more)
(+25 files in other folders)
